--- a/01/index.html
+++ b/01/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script>
-        var str = "Hello, world";
-        console.log(str);
+    <script src="main.js">
     </script>
 </head>
 
